add a bigger pause between checking if cluster deployed; update API to support number of nodes parameter during creation of a cluster;
