# rmapp/views.py
@@ -73,10 +73,13 @@ class ClusterViewSet(viewsets.ModelViewSet):
         cluster.user_id = request.user.id
         cluster.name = "%s_%s" % (appliance.name, uuid.uuid4())
         cluster.hints = data2["hints"]
+        if "targeted_slaves_count" in data2:
+            cluster.targeted_slaves_count = data2["targeted_slaves_count"]
         cluster.save()
 
-        # mister_cluster = MisterClusterImplementation()
-        # mister_cluster.generate_clusters_keypairs(cluster)
+        if cluster.targeted_slaves_count > 0:
+            mister_cluster = MisterClusterImplementation()
+            mister_cluster.resize_cluster(cluster, new_size=cluster.targeted_slaves_count)
 
         serializer = ClusterSerializer(cluster)
         return Response(serializer.data, status=status.HTTP_201_CREATED)
@@ -125,8 +128,8 @@ class ClusterViewSet(viewsets.ModelViewSet):
                 result = actions_api.new_account_post()
                 try_account_creation = False
             except:
-                logging.info("service located at 'http://%s:8012' does not seem to be ready, waiting 2 seconds before retrying to contact it" % (master_node_ip,))
-                time.sleep(2)
+                logging.info("service located at 'http://%s:8012' does not seem to be ready, waiting 5 seconds before retrying to contact it" % (master_node_ip,))
+                time.sleep(5)
 
         response = {
             "username": result.username,
